--- a/portifolio/static/css/index.css
+++ b/portifolio/static/css/index.css
@@ -5,8 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: var(--texto-style);
-
+    font-family: 'Roboto', sans-serif;
 }
 
 :root {
@@ -102,6 +101,18 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+.div-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.div-img img {
+    width: 50px;
+    height: 50px;
 }
 
 /* Media Queries */
